--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   flutter_animated_button: ^2.0.3
   fl_chart: ^0.62.0
+  google_nav_bar: ^5.0.6
+  cloud_firestore: ^4.9.0
 
 dev_dependencies:
 
