--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,6 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   flutter_animated_button: ^2.0.3
   fl_chart: ^0.62.0
-  google_nav_bar: ^5.0.6
   cloud_firestore: ^4.9.0
 
 dev_dependencies:
@@ -93,6 +92,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/ieee_logo.png
+    - assets/images/bg.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -107,6 +107,9 @@ flutter:
       fonts:
         - asset: assets\fonts\Rubik-Regular.ttf
         - asset: assets\fonts\Rubik-Bold.ttf
+    - family: Badaboom
+      fonts:
+        - asset: assets\fonts\badaboom.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
