--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1093192662099-4tu0e4d3dttkns6cr578h6dplnhbm7e1.apps.googleusercontent.com</string>
+	<string>428028161300-tmnm1bjgangor1ttl8bf9adkccpmg4a0.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1093192662099-4tu0e4d3dttkns6cr578h6dplnhbm7e1</string>
+	<string>com.googleusercontent.apps.428028161300-tmnm1bjgangor1ttl8bf9adkccpmg4a0</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAFEdcZzTVL2U02Cb7-qaRV9gI79Hojmsk</string>
+	<string>AIzaSyAGdptRsAaVSHnRbivvpS1OQCDFkZCdLA0</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1093192662099</string>
+	<string>428028161300</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.ieeeTicketScanner</string>
 	<key>PROJECT_ID</key>
-	<string>ticket-scanner-163c1</string>
+	<string>ticket-scanner-2</string>
 	<key>STORAGE_BUCKET</key>
-	<string>ticket-scanner-163c1.appspot.com</string>
+	<string>ticket-scanner-2.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1093192662099:ios:390ad5abda0571b68bdaa6</string>
+	<string>1:428028161300:ios:93c470888440246793e601</string>
 </dict>
 </plist>
